<resources>
    <string name="app_name">Puz Zombis</string>

    <string name="BTNLOGIN">LOGIN</string>
    <string name="BNTREGISTRO">REGISTRO</string>

    <string name="correoEt">Correo electronico</string>
    <string name="passEt">Contraseña</string>
    <string name="nombreEt">Nombre</string>
    <string name="fechaTxt">Fecha</string>
    <string name="Registrar">REGISTRAR</string>
</resources>